<resources>
    <string name="app_name">Luga Luga</string>
    <string name="hint_email">EMAIL</string>
    <string name="hint_senha">SENHA</string>
    <string name="esqueceu_senha">Esqueceu a senha?</string>
    <string name="login">Login</string>
    <string name="sem_conta">Não tenho uma conta!</string>


    <string name="tv_produto">Nome Produto</string>
    <string name="tv_preco">R$00,00</string>
    <string name="tv_descricao">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem</string>
    <string name="aluga">Alugar</string>
    <string name="bairro">BAIRRO</string>
    <string name="nome">NOME</string>
    <string name="cpf">CPF</string>
    <string name="nascimento">DATA DE NASCIMENTO</string>
    <string name="logradouro">LOGRADOURO</string>
    <string name="numero">NÚMERO</string>
    <string name="complemento">COMPLEMENTO</string>
    <string name="cidade">CIDADE</string>
    <string name="cadastrar">CADASTRAR</string>
    <string name="uf">UF</string>


    <string name="cep">CEP</string>

    <string-array name="uf_cadastro">

        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>

    </string-array>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="produtos">Produtos</string>
    <string name="Solicitações">Solicitações</string>
    <string name="Acompanhamento">Acompanhamento</string>
    <string name="Atendimento">Atendimento</string>
    <string name="sobre">Sobre Nós</string>
    <string name="fale">Fale conosco</string>
    <string name="telDuvidas">TELEFONE DE DUVIDAS</string>
    <string name="telefone">19 987654123</string>
    <string name="deixar_dados">DEIXE AQUI SEUS DADOS</string>
    <string name="telefoneCliente">TELEFONE</string>
    <string name="ajuda">AJUDA</string>
    <string name="descricao">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris dignissim, nisl id lacinia pretium, magna dui viverra sem, eget ornare lacus nibh sit amet orci. Donec felis libero, gravida placerat mi ac, aliquam ullamcorper turpis. Etiam eget aliquet magna. Suspendisse quis finibus ipsum. Aenean gravida dignissim sapien et imperdiet. Curabitur et condimentum velit.</string>
</resources>